Refactor code after review: improve OOP structure and fix style issues